# shaders

./: CMakeLists.txt  Justfile  main.cc  shader.frag  shader.vert
glad/include/glad/: gl.h
